--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -11,19 +11,21 @@
     </style>
   </head>
 <body ng-app="LunchCheck">
-   <div class="container">
+   <div class="container" ng-controller="LunchCheckController">
      <h1>Lunch Checker</h1>
 
-         <div class="form-group">
+         <div class="form-group {{validationState}}">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control"
+             ng-model="items">
+             <span class="help-block">" , , " items NOT considered in count</span>
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkItems();">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
+         <div class="form-group message {{validationState}}">
+           <span class="help-block">{{message}}</span>
          </div>
    </div>
 
