--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,18 +9,21 @@
     <script src="js/app.js"></script>
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller="NarrowItDownController as menu">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" placeholder="search term" class="form-control"
+      ng-model="menu.searchTerm">
     </div>
-    <div class="form-group narrow-button">
+    <div class="form-group narrow-button" ng-click="menu.narrowDown(menu.searchTerm);">
       <button class="btn btn-primary">Narrow It Down For Me!</button>
     </div>
 
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <div id="found-items">
+      <div>{{menu.loadingStatus}}</div>
+    <found-items found="menu.found" on-remove="menu.removeItem(index)"></found-items>
+    </div>
   </div>
 
 </body>
