--- a/module5-solution/src/public/user_info/signup.html
+++ b/module5-solution/src/public/user_info/signup.html
@@ -7,37 +7,75 @@
     <div class="form-group">
       <label>FirstName:</label>
       <input type="text" name="firstName" class="form-control"
+        placeholder="Pick a UserName"
+        minlength="4"
+        ng-maxlength="10"
         ng-model="reg.user.firstName" required>
+        <span
+          ng-if="(signupForm.firstName.$error.minlength ||
+          signupForm.firstName.$error.required) && signupForm.firstName.$touched">
+          Username must be at least 4 characters long
+        </span>
+        {{ reg.firstName }}
+        <span ng-if="signupForm.firstName.$error.maxlength && signupForm.firstName.$touched">
+          Username must not be longer than 10 characters
+        </span>
     </div>
 
     <div class="form-group">
       <label>LastName:</label>
       <input type="text" name="lastName" class="form-control"
+        placeholder="Pick a FamilyName"
         ng-model="reg.user.lastName" required>
+        <span
+          ng-if="signupForm.lastName.$error.required && signupForm.lastName.$touched">
+          Username must be at least 4 characters long
+        </span>
     </div>
 
     <div class="form-group">
       <label>Email Address:</label>
       <input type="email" name="email" class="form-control"
+        placeholder="email@mail.com"
         ng-model="reg.user.email" required>
+        <span ng-if="signupForm.email.$invalid && signupForm.email.$touched">
+          Must be a valid email address: handle@domain format
+        </span>
     </div>
 
     <div class="form-group">
       <label>Phone Number:</label>
       <input type="text" name="phone" class="form-control"
         ng-model="reg.user.phone" required
+        placeholder="###-###-####"
         pattern="(\d{3})-(\d{3})-(\d{4})">
+        <span ng-if="signupForm.phone.$invalid && signupForm.phone.$touched">
+          Phone must be in the format ###-###-####.
+        </span>
     </div>
 
     <div class="form-group">
       <label>Favourite Dish:</label>
       <input type="text" name="favdish" class="form-control"
+        placeholder="Dish short name, f.e. L1"
         ng-model="reg.user.favdish" required>
+        <span
+          ng-if="signupForm.favdish.$error.required && signupForm.favdish.$touched">
+          Username must be at least 4 characters long
+        </span>
+        <span ng-if="reg.dish_not_exists">
+          Error: No such menu number exists</span>
     </div>
 
       <button class="btn btn-default"
-        ng-disbled="signup-form.$invalid"
+        ng-disabled="signupForm.$invalid"
         ng-click="reg.submit()">Submit</button>
+
+      <span ng-if="reg.saved">Redirecting...</span>
+
+      <h3 ng-if="reg.saved">
+        Your information has been saved </h3>
+
   </form>
 </div>
 
