--- a/module5-solution/src/public/user_info/userinfo.html
+++ b/module5-solution/src/public/user_info/userinfo.html
@@ -2,14 +2,32 @@
 
   <h2>UserInfo</h2>
 
-  <div class="row col-md-4">
+  <div ng-if="info.empty()">Not Signed Up Yet.
+    <a ui-sref="public.signup">Sign up Now!</a></div>
 
-    <p><span>FirstName: </span>{{ info.user.firstName }}</p>
-    <p><span>LastName: </span>{{ info.user.lastName }}</p>
-    <p><span>Email: </span>{{ info.user.email }}</p>
-    <p><span>Phone: </span>{{ info.user.phone }}</p>
-    <p><span>FavDish: </span>{{ info.user.favdish }}</p>
+  <div class="row">
 
+    <div class="col-md-4" ng-if="!info.empty()">
+
+      <p><span>FirstName: </span>{{ info.user.firstName }}</p>
+      <p><span>LastName: </span>{{ info.user.lastName }}</p>
+      <p><span>Email: </span>{{ info.user.email }}</p>
+      <p><span>Phone: </span>{{ info.user.phone }}</p>
+      <p><span>FavDish: </span>{{ info.user.favdish }}</p>
+
+    </div>
+
+    <div class="col-md-4" ng-if="info.favdish">
+      <h3>Fav Menu Item</h3>
+
+      <img class="img-responsive"
+        ng-src="{{info.favdish.url}}"
+        alt="{{info.favdish.name}}">
+      <div class="menu-item-description">
+        <h3 class="menu-item-title">{{info.favdish.name}}</h3>
+        <p class="menu-item-details">{{info.favdish.description}}</p>
+      </div>
+    </div>
   </div>
 </div>
 
